tests/cases/errors/cpp_emit_unsupported_unary_op/main.sv
module Top;
  int a;
  initial begin
    a = -a;
  end
endmodule
